name:                alonzo
version:             0.0.0.1
synopsis:            a Scheme interpreter written in Haskell
-- description:
homepage:            xor.lonnen.com/alonzo
license:             OtherLicense
license-file:        LICENSE
author:              lonnen
maintainer:          @lonnen
-- copyright:
category:            Interpreter
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/lonnen/alonzo.git

executable alonzo
  default-language:    Haskell98
  default-extensions:  ExistentialQuantification
  main-is:             src/Main.hs
  -- other-modules:
  build-depends:       base   >=4.0 && < 5,
                       parsec ==3.1.3,
                       mtl
