name:                alonzo
version:             0.0.0.1
synopsis:            a Scheme interpreter written in Haskell
-- description:
homepage:            xor.lonnen.com/alonzo
license:             OtherLicense
license-file:        LICENSE
author:              lonnen
maintainer:          @lonnen
-- copyright:
category:            Interpreter
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/lonnen/alonzo.git

executable alonzo
  main-is:             Main.hs
  default-extensions:  ExistentialQuantification
  build-depends:       base   >=4.0 && < 5,
                       parsec ==3.1.3,
                       mtl
  hs-source-dirs:      src
  default-language:    Haskell98

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  build-depends:       base,
                       alonzo,
                       hspec >= 2.0 && < 2.1
  hs-source-dirs:      tests
  default-language:    Haskell98

library
  exposed-modules:     Alonzo
  default-extensions:  ExistentialQuantification
  build-depends:       base   >=4.0 && < 5,
                       parsec ==3.1.3,
                       mtl
  hs-source-dirs:      src
  default-language:    Haskell98
